feat: apply Stitch Dashboard UI Template

--- a/frontend/features/analytics.html
+++ b/frontend/features/analytics.html
@@ -150,7 +150,8 @@
         <div class="feature-section">
             <h2>Data-Driven Decisions Made Easy</h2>
             <p>
-                Stop guessing and start knowing. AmazonReach's Real-Time Analytics dashboard aggregates data
+                Stop guessing and start knowing. By incorporating an expert digital marketing strategy, AmazonReach's
+                Real-Time Analytics dashboard aggregates data
                 from all your sales channels into a single, comprehensive view. Identify trends, monitor
                 profitability, and make informed decisions faster than ever before.
             </p>
