--- a/frontend/features/global-fulfillment.html
+++ b/frontend/features/global-fulfillment.html
@@ -151,11 +151,13 @@
             <h2>Scale Your Business Worldwide</h2>
             <p>
                 Breaking into international markets has never been easier. AmazonReach's Global Fulfillment system
-                connects you with warehouses, shipping partners, and customs experts across the globe—automatically
-                selecting the most cost-effective and fastest routes for your products.
+                connects you with worldwide warehouses, shipping partners, and customs experts—automatically
+                selecting the most cost-effective and fastest routes for your products. Combine this with our
+                international SEO services to maximize your organic reach across borders.
             </p>
             <p>
-                Whether you're shipping to Tokyo, London, or Sydney, our AI-powered logistics engine ensures your
+                Whether you're shipping to Tokyo, London, or Sydney, our AI-powered global fulfillment logistics engine
+                ensures your
                 customers receive their orders on time, every time.
             </p>
         </div>
