--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmazonReach - Global Amazon Fulfillment & Analytics for K-Brands</title>
+    <title>AmazonReach - Amazon SEO &amp; Global Fulfillment for K-Brands</title>
     <meta name="description"
-        content="Scale your K-brand globally with AmazonReach. We provide comprehensive Amazon Expansion services, Global Fulfillment, and a powerful SaaS solution for analytics and inventory management.">
+        content="Scale your K-brand globally with AmazonReach. We provide expert Amazon SEO services, digital marketing strategy, global fulfillment, and powerful analytics.">
     <meta name="keywords"
-        content="Amazon Expansion, K-brand, SaaS solution, Global Fulfillment, Amazon Analytics, Korean Sellers, Cross-border E-commerce">
+        content="Amazon SEO, digital marketing strategy, global fulfillment, SEO services, Amazon advertising services, K-brand, SaaS solution, Amazon Analytics, Korean Sellers">
     <meta name="google-site-verification" content="LQ1LGdLdmc_1PjTxbMwkXtw9JW-jQpIqPyCk6q5rFe4" />
 
 
@@ -20,17 +20,17 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://amazonreach.pages.dev/">
-    <meta property="og:title" content="AmazonReach - Global Amazon Fulfillment & Analytics for K-Brands">
+    <meta property="og:title" content="AmazonReach - Amazon SEO &amp; Global Fulfillment for K-Brands">
     <meta property="og:description"
-        content="Scale your Amazon business globally with AI-powered analytics, automated inventory management, and global fulfillment across 150+ countries.">
+        content="Scale your Amazon business globally with expert Amazon SEO, digital marketing strategy, and automated global fulfillment across 150+ countries.">
     <meta property="og:image" content="https://amazonreach.pages.dev/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://amazonreach.pages.dev/">
-    <meta property="twitter:title" content="AmazonReach - Global Amazon Fulfillment & Analytics">
+    <meta property="twitter:title" content="AmazonReach - Amazon SEO &amp; Global Fulfillment">
     <meta property="twitter:description"
-        content="Scale your Amazon business globally with AI-powered analytics and automated inventory management.">
+        content="Scale your Amazon business globally with expert Amazon SEO, digital marketing strategy, and automated global fulfillment.">
     <meta property="twitter:image" content="https://amazonreach.pages.dev/images/og-image.jpg">
 
     <!-- Fonts -->
@@ -63,7 +63,7 @@
           "name": "AmazonReach",
           "url": "https://amazonreach.pages.dev",
           "logo": "https://amazonreach.pages.dev/images/logo.png",
-          "description": "Global Amazon fulfillment and analytics platform for K-brands and international sellers. Scale your Amazon business with AI-powered analytics and automated inventory management.",
+          "description": "Expert Amazon SEO and global fulfillment platform for K-brands and international sellers. Scale your Amazon business with specialized digital marketing strategy and AI analytics.",
           "sameAs": [
             "https://www.linkedin.com/company/amazonreach",
             "https://twitter.com/amazonreach"
@@ -93,7 +93,7 @@
             "bestRating": "5",
             "worstRating": "1"
           },
-          "description": "Comprehensive Amazon expansion platform with global fulfillment, real-time analytics, and inventory management for international sellers."
+          "description": "Comprehensive Amazon expansion platform providing Amazon SEO, global fulfillment, real-time analytics, and inventory management for international sellers."
         }
       ]
     }
@@ -127,12 +127,13 @@
             <div class="hero-content">
 
                 <h1 class="hero-title">
-                    Scale Your Amazon Business
+                    Master Amazon SEO &amp; Scale Your Business
                     <span class="gradient-text">Globally</span>
                 </h1>
                 <p class="hero-subtitle">
-                    From local seller to international success. We handle global fulfillment,
-                    inventory management, and revenue analytics—so you can focus on growth.
+                    From local seller to international success. We handle your expert digital marketing strategy, global
+                    fulfillment,
+                    and revenue analytics—so you can focus on explosive growth.
                 </p>
                 <div class="hero-cta">
                     <a href="/checkout-choice.html" class="btn btn-primary">
@@ -182,8 +183,9 @@
 
                 <div class="feature-card">
                     <div class="feature-icon">📊</div>
-                    <h3>Real-Time Analytics</h3>
-                    <p>Track sales, inventory, and performance metrics in one beautiful dashboard.</p>
+                    <h3>Amazon SEO Optimization</h3>
+                    <p>Track sales, inventory, and performance metrics while optimizing your listings for top Amazon SEO
+                        rankings.</p>
                     <a href="/features/analytics.html" class="feature-link">Learn more →</a>
                 </div>
 
@@ -203,8 +205,9 @@
 
                 <div class="feature-card">
                     <div class="feature-icon">🎯</div>
-                    <h3>Market Expansion</h3>
-                    <p>Discover new markets with data-driven insights and expansion recommendations.</p>
+                    <h3>Amazon Advertising Services</h3>
+                    <p>Discover new markets with data-driven insights and amplify your reach with our Amazon Advertising
+                        Services.</p>
                     <a href="/features/market-expansion.html" class="feature-link">Learn more →</a>
                 </div>
 
