--- a/frontend/dashboard/analytics.html
+++ b/frontend/dashboard/analytics.html
@@ -2,47 +2,159 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analytics - AmazonReach</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>AmazonReach | Analytics</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#1152d4",
+                        "background-light": "#f6f6f8",
+                        "background-dark": "#101622",
+                    },
+                    fontFamily: {
+                        "display": ["Inter", "sans-serif"]
+                    },
+                    borderRadius: {
+                        "DEFAULT": "0.25rem",
+                        "lg": "0.5rem",
+                        "xl": "0.75rem",
+                        "full": "9999px"
+                    },
+                },
+            },
+        }
+    </script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+
+        .sidebar-item-active {
+            background-color: rgba(17, 82, 212, 0.1);
+            color: #1152d4;
+            border-right: 3px solid #1152d4;
+        }
+    </style>
 </head>
 
-<body>
-    <aside class="sidebar">
-        <div class="logo">
-            <a href="https://amazonreach.pages.dev"
-                style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px;">
-                <span>🚀</span> AmazonReach
-            </a>
-        </div>
-        <ul class="nav-links">
-            <li class="nav-item"><a href="dashboard.html" class="nav-link"><span>📊</span> Overview</a></li>
-            <li class="nav-item"><a href="inventory.html" class="nav-link"><span>📦</span> Inventory</a></li>
-            <li class="nav-item"><a href="#" class="nav-link active"><span>📈</span> Analytics</a></li>
-            <li class="nav-item"><a href="blog-editor.html" class="nav-link"><span>📝</span> Blog</a></li>
-            <li class="nav-item"><a href="settings.html" class="nav-link"><span>⚙️</span> Settings</a></li>
-        </ul>
-        <div class="user-profile">
-            <div class="avatar">U</div>
-            <div class="user-info">
-                <div class="user-name" id="userName">User</div>
-                <div class="user-role" id="userRole">Seller</div>
+<body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 font-display">
+    <div class="flex h-screen overflow-hidden">
+        <!-- Sidebar Navigation -->
+        <aside class="w-64 bg-white dark:bg-slate-900 border-r border-slate-200 dark:border-slate-800 flex flex-col">
+            <div class="p-6 flex items-center gap-3">
+                <div class="bg-primary rounded-lg p-1.5 flex items-center justify-center">
+                    <span class="material-symbols-outlined text-white">trending_up</span>
+                </div>
+                <div>
+                    <h1 class="text-lg font-bold tracking-tight text-slate-900 dark:text-white">AmazonReach</h1>
+                    <p class="text-xs text-slate-500 dark:text-slate-400">Performance Marketing</p>
+                </div>
             </div>
-            <button class="btn-logout" id="logoutBtn">🚪</button>
-        </div>
-    </aside>
-    <main class="main-content">
-        <header class="header">
-            <h1 class="page-title">Analytics & Reports</h1>
-        </header>
-        <div class="card">
-            <div class="card-title">Revenue Trend (Last 30 Days)</div>
-            <div style="height: 400px; position: relative; margin-top: 16px;">
-                <canvas id="revenueChart"></canvas>
+            <nav class="flex-1 px-3 space-y-1 mt-4">
+                <a class="flex items-center gap-3 px-4 py-3 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-colors"
+                    href="dashboard.html">
+                    <span class="material-symbols-outlined">dashboard</span>
+                    <span class="text-sm font-medium">Overview</span>
+                </a>
+                <a class="flex items-center gap-3 px-4 py-3 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-colors"
+                    href="inventory.html">
+                    <span class="material-symbols-outlined">inventory_2</span>
+                    <span class="text-sm font-medium">Inventory</span>
+                </a>
+                <a class="sidebar-item-active flex items-center gap-3 px-4 py-3 rounded-lg transition-colors"
+                    href="analytics.html">
+                    <span class="material-symbols-outlined">analytics</span>
+                    <span class="text-sm font-medium">Analytics</span>
+                </a>
+                <a class="flex items-center gap-3 px-4 py-3 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-colors"
+                    href="blog-editor.html">
+                    <span class="material-symbols-outlined">article</span>
+                    <span class="text-sm font-medium">Blog</span>
+                </a>
+                <a class="flex items-center gap-3 px-4 py-3 text-slate-600 dark:text-slate-400 hover:bg-slate-50 dark:hover:bg-slate-800 rounded-lg transition-colors"
+                    href="settings.html">
+                    <span class="material-symbols-outlined">settings</span>
+                    <span class="text-sm font-medium">Settings</span>
+                </a>
+            </nav>
+            <div class="p-4 border-t border-slate-200 dark:border-slate-800">
+                <div class="bg-primary/5 dark:bg-primary/10 rounded-xl p-4">
+                    <p class="text-xs font-semibold text-primary uppercase tracking-wider mb-2">Agency Plan</p>
+                    <p class="text-xs text-slate-600 dark:text-slate-400 mb-3">You are using 85% of your API quota.</p>
+                    <div class="w-full bg-slate-200 dark:bg-slate-700 h-1.5 rounded-full overflow-hidden">
+                        <div class="bg-primary h-full w-[85%]"></div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </main>
+        </aside>
+
+        <!-- Main Content Area -->
+        <main class="flex-1 flex flex-col overflow-y-auto">
+            <!-- Top Bar -->
+            <header
+                class="header h-16 bg-white dark:bg-slate-900 border-b border-slate-200 dark:border-slate-800 flex items-center justify-between px-8 sticky top-0 z-10">
+                <div class="flex items-center gap-4">
+                    <h2 class="page-title text-xl font-semibold text-slate-900 dark:text-white">Analytics & Reports</h2>
+                    <div class="h-6 w-px bg-slate-200 dark:bg-slate-700"></div>
+                </div>
+                <div class="flex items-center gap-5">
+                    <div class="relative">
+                        <button id="logoutBtn" title="Logout"
+                            class="text-slate-500 hover:text-red-500 focus:outline-none flex items-center justify-center p-1 cursor-pointer">
+                            <span class="material-symbols-outlined rounded">logout</span>
+                        </button>
+                    </div>
+                    <div class="flex items-center gap-3 pl-5 border-l border-slate-200 dark:border-slate-700">
+                        <div class="text-right">
+                            <p class="text-sm font-semibold text-slate-900 dark:text-white" id="userName">User</p>
+                            <p class="text-xs text-slate-500 dark:text-slate-400" id="userRole">Seller</p>
+                        </div>
+                        <div
+                            class="w-10 h-10 rounded-full bg-primary/20 flex items-center justify-center overflow-hidden border-2 border-primary/10">
+                            <img alt="User Profile" class="w-full h-full object-cover"
+                                data-alt="Portrait of a female business professional"
+                                src="https://lh3.googleusercontent.com/aida-public/AB6AXuAu2QVN11Tg4KvitRRv8zZfwrScG7ctjEBT5Q8HjTi1MZQe1FxAqMXTBB_lfnBJqPXQIW1tH0to31QBofo5stexv8YU88N1ilR2_tvKnclSNGXLqtw_JimhcWDC13aguRW15mky09XJqUuEbfw2wtlqge5boPyaTtATpNvncs75Y_4ggKfRLyBywh4KGX2oOP04adzTzk_JuOHTzzreufKINBnqu-zb2TFy3XmnRDOo9veUFACNGiG5wK-VpFrl0TinCuX2xFEBavDZ" />
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <!-- Dashboard Body -->
+            <div class="p-8 space-y-8">
+                <!-- Analytics Chart Card -->
+                <div
+                    class="bg-white dark:bg-slate-900 rounded-xl border border-slate-200 dark:border-slate-800 shadow-sm overflow-hidden p-6">
+                    <div class="flex items-center justify-between mb-8">
+                        <div>
+                            <h3 class="text-lg font-bold text-slate-900 dark:text-white">Revenue Trend (Last 30 Days)
+                            </h3>
+                            <p class="text-sm text-slate-500 dark:text-slate-400">Total revenue generated</p>
+                        </div>
+                    </div>
+                    <div class="h-80 w-full relative">
+                        <canvas id="revenueChart"></canvas>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer -->
+            <footer class="p-8 border-t border-slate-200 dark:border-slate-800 text-center">
+                <p class="text-sm text-slate-500 dark:text-slate-400">© 2026 AmazonReach Marketing Agency.</p>
+            </footer>
+        </main>
+    </div>
+
+    <!-- Script tags from the original Analytics page -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="dashboard.js"></script>
     <script>
@@ -63,8 +175,8 @@
                             datasets: [{
                                 label: 'Revenue ($)',
                                 data: trendData.map(d => d.revenue),
-                                borderColor: '#FF9900',
-                                backgroundColor: 'rgba(255, 153, 0, 0.1)',
+                                borderColor: '#1152d4',
+                                backgroundColor: 'rgba(17, 82, 212, 0.1)',
                                 tension: 0.4,
                                 fill: true
                             }]
@@ -74,17 +186,17 @@
                             maintainAspectRatio: false,
                             plugins: {
                                 legend: {
-                                    labels: { color: '#94A3B8' }
+                                    labels: { color: document.documentElement.classList.contains('dark') ? '#94A3B8' : '#475569' }
                                 }
                             },
                             scales: {
                                 y: {
-                                    grid: { color: 'rgba(255, 255, 255, 0.05)' },
-                                    ticks: { color: '#94A3B8' }
+                                    grid: { color: document.documentElement.classList.contains('dark') ? 'rgba(255, 255, 255, 0.05)' : 'rgba(0, 0, 0, 0.05)' },
+                                    ticks: { color: document.documentElement.classList.contains('dark') ? '#94A3B8' : '#475569' }
                                 },
                                 x: {
                                     grid: { display: false },
-                                    ticks: { color: '#94A3B8' }
+                                    ticks: { color: document.documentElement.classList.contains('dark') ? '#94A3B8' : '#475569' }
                                 }
                             }
                         }
