feat: link AmazonReach logo to homepage across all pages

--- a/frontend/checkout-choice.html
+++ b/frontend/checkout-choice.html
@@ -276,10 +276,11 @@
 
 <body>
     <div class="container">
-        <div class="logo">
+        <a href="/" class="logo hover:opacity-90 transition-opacity"
+            style="text-decoration:none; color:inherit; display:block;">
             <div class="logo-icon">🚀</div>
             <div class="logo-text">AmazonReach</div>
-        </div>
+        </a>
 
         <div class="plan-info">
             <h1>Choose How to Continue</h1>
