--- a/frontend/register.html
+++ b/frontend/register.html
@@ -208,10 +208,11 @@
 
 <body>
     <div class="register-container">
-        <div class="logo">
+        <a href="/" class="logo hover:opacity-90 transition-opacity"
+            style="text-decoration:none; color:inherit; display:block;">
             <div class="logo-icon">🚀</div>
             <div class="logo-text">AmazonReach</div>
-        </div>
+        </a>
 
         <h1>Start Your Free Trial</h1>
         <p class="subtitle">14 days free trial</p>
