--- a/frontend/login.html
+++ b/frontend/login.html
@@ -55,12 +55,12 @@
     <!-- Top Navigation / Header -->
     <header
         class="w-full px-6 py-4 flex justify-between items-center bg-white/80 backdrop-blur-md border-b border-slate-200 dark:bg-background-dark/80 dark:border-slate-800 sticky top-0 z-50">
-        <div class="flex items-center gap-2">
+        <a href="/" class="flex items-center gap-2 hover:opacity-90 transition-opacity cursor-pointer">
             <div class="bg-primary p-1.5 rounded-lg flex items-center justify-center">
                 <span class="material-symbols-outlined text-white text-2xl">rocket_launch</span>
             </div>
             <h1 class="text-xl font-bold tracking-tight text-slate-900 dark:text-white">AmazonReach</h1>
-        </div>
+        </a>
         <div class="flex items-center gap-4">
             <span class="hidden md:flex items-center gap-1 text-xs font-medium text-slate-500 uppercase tracking-wider">
                 <span class="material-symbols-outlined text-sm">verified_user</span>
