feat: implement professional hybrid audit system (lead magnet)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <link rel="stylesheet" href="modal.css">
 
@@ -115,7 +115,7 @@
                 <a href="/reviews.html">Reviews</a>
                 <a href="#about">About</a>
                 <a href="/login.html" class="nav-login">Sign In</a>
-                <a href="/checkout-choice.html" class="nav-cta">Start Free Trial</a>
+                <a href="/audit-request.html" class="nav-cta">Get Free Prof. Audit</a>
             </div>
         </div>
     </nav>
@@ -136,8 +136,8 @@
                     and revenue analytics—so you can focus on explosive growth.
                 </p>
                 <div class="hero-cta">
-                    <a href="/checkout-choice.html" class="btn btn-primary">
-                        Start Free Trial
+                    <a href="/audit-request.html" class="btn btn-primary">
+                        Get Free Professional Audit
                         <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path d="M13 7l5 5m0 0l-5 5m5-5H6" stroke-width="2" stroke-linecap="round"
                                 stroke-linejoin="round" />
@@ -147,6 +147,10 @@
                         Watch Demo
                     </a>
                 </div>
+                <p class="mt-4 text-sm text-slate-400 opacity-80">
+                    <span class="logo-icon">✨</span> Professional AI Strategy Report delivered <strong>within 24
+                        hours</strong>.
+                </p>
                 <div class="hero-stats">
                     <div class="stat">
                         <div class="stat-number">$50M+</div>
@@ -351,10 +355,11 @@
                 <h2>Ready to Scale Your Amazon Business?</h2>
                 <p>Join thousands of sellers growing their business with AmazonReach</p>
                 <div class="cta-buttons">
-                    <a href="/checkout-choice.html" class="btn btn-primary btn-lg">
-                        Start Free 14-Day Trial
+                    <a href="/audit-request.html" class="btn btn-primary btn-lg">
+                        Get Your Free Professional Audit
                     </a>
                 </div>
+                <p class="mt-4 text-blue-200 text-sm">No credit card required. Report sent within 24 hours.</p>
             </div>
         </div>
     </section>
