--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,16 @@
     <meta name="description"
         content="Scale your K-brand globally with AmazonReach. Expert Amazon SEO, digital marketing strategy, and global fulfillment.">
     <meta name="google-site-verification" content="LQ1LGdLdmc_1PjTxbMwkXtw9JW-jQpIqPyCk6q5rFe4" />
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D7F4VJGJM3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-D7F4VJGJM3');
+    </script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
@@ -59,9 +69,9 @@
                 <a href="/login.html"
                     class="hidden sm:block text-sm font-bold text-slate-500 hover:text-slate-800 transition-colors">Sign
                     In</a>
-                <a href="/audit-request.html"
+                <a href="/diagnostic.html"
                     class="bg-[#1152d4] hover:bg-blue-700 text-white text-sm font-extrabold px-6 py-3 rounded-2xl shadow-md transition-all transform hover:-translate-y-0.5">
-                    Free Prof. Audit
+                    Check Survival Score
                 </a>
             </div>
         </div>
@@ -80,18 +90,18 @@
         </div>
 
         <h1 class="text-5xl md:text-7xl font-black tracking-tight leading-[1.1] mb-8 text-slate-900">
-            Master Amazon SEO &<br>Scale Your Business <span class="text-[#1152d4]">Globally</span>
+            Don't Let One Mismatch Settle Your <br><span class="text-[#1152d4]">Amazon Fate.</span>
         </h1>
 
         <p class="text-lg md:text-xl text-slate-500 max-w-2xl mx-auto mb-10 leading-relaxed font-medium">
-            From local seller to international success. We handle expertise-led digital marketing, global fulfillment,
-            and revenue analytics—so you can focus on explosive growth.
+            90% of Shopify sellers fail their first Amazon entry due to account suspension or generic barcodes.
+            <strong>Check your Survival Index in 60 seconds.</strong>
         </p>
 
         <div class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-16">
-            <a href="/audit-request.html"
+            <a href="/diagnostic.html"
                 class="w-full sm:w-auto bg-[#1152d4] hover:bg-blue-700 text-white font-black py-4 px-10 rounded-2xl shadow-2xl shadow-blue-500/20 text-lg transition-all transform hover:-translate-y-1">
-                Get Free Professional Audit
+                Check My Survival Index
             </a>
             <button onclick="document.getElementById('demo-modal').classList.remove('hidden')"
                 class="w-full sm:w-auto bg-white hover:bg-slate-50 text-slate-800 font-bold py-4 px-10 rounded-2xl border border-slate-200 transition-all flex items-center justify-center gap-2">
@@ -402,7 +412,7 @@
                 class="absolute top-4 right-4 text-slate-500 hover:text-slate-800 z-10">
                 <span class="material-symbols-outlined text-3xl">close</span>
             </button>
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1"
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dQw4w9WgXcQ" id="demo-video"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
