--- a/frontend/subscribe-success.html
+++ b/frontend/subscribe-success.html
@@ -4,6 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D7F4VJGJM3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-D7F4VJGJM3');
+    </script>
+
     <title>Subscription Confirmed - AmazonReach</title>
     <link rel="stylesheet" href="/styles.css">
     <style>
@@ -33,6 +43,7 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -56,6 +67,7 @@
             from {
                 transform: scale(0);
             }
+
             to {
                 transform: scale(1);
             }
